--- a/src/Pages/EditRecipe/EditRecipe.css
+++ b/src/Pages/EditRecipe/EditRecipe.css
@@ -1,37 +1,9 @@
 .edit-recipe{
-    max-width: 500px;
+    max-width: 75%;
     margin: 0 auto;
     text-align: center;
 }
 
-.recipe-name{
-    width: 100%;
-    text-align: center;
-    font-size: 20px;
-    margin: 12px 0px;
-}
-
-.inputs{
-    display: inline-flex;
-    width: 100%;
-}
-
-.inputs .ingredient-name{
-    width: 75%;
-}
-
-.inputs .ingredient-amount{
-    width: 25%;
-}
-
-.inputs textarea{
-    width: 100%;
-    height: 100px;
-    resize: none;
-}
-
-.inputs .delete{
-    width: 20px;
-    height: 20px;
-    background-color: rgb(226, 84, 84);
+.ingredients input:nth-child(1){
+    flex: 30%;
 }
