--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,14 @@ body {
     height: 100%;
 }
 
-.page{
-    height: calc(100% - var(--nav-bar-height));
+@media only screen and (max-width: 768px) {
+    .desktop{
+        display: none;
+    }
+}
+
+@media only screen and (min-width: 769px) {
+    .mobile{
+        display: none;
+    }
 }
