--- a/src/Components/RecipeModule/RecipeModule.css
+++ b/src/Components/RecipeModule/RecipeModule.css
@@ -1,26 +1,33 @@
-.recipe-module {
-    display: flex;
-    height: 100%;
+
+
+@media only screen and (max-width: 768px) {
+
 }
 
-.recipe-module .recipe{
-    overflow-y: auto;
+@media only screen and (min-width: 769px) {
+    .recipe-module {
+        display: flex;
+        height: 100%;
+    }
+    
+    .recipe-module .recipe{
+        overflow-y: auto;
+    }
+    
+    .recipe-module .list-group-item{
+        text-align: left;
+    }
+    
+    
+    /*Handles all CSS on navbar side(left) of module*/
+    .recipe-module .recipe-nav-bar{
+        background-color: var(--secondary-color);
+        overflow-y: auto;
+        width: 250px;
+    }
+    
+    .recipe-module .recipe-nav-bar .active,
+    .recipe-module .recipe-nav-bar button:hover{
+        background-color: var(--active-color);
+    }    
 }
-
-.recipe-module .list-group-item{
-    text-align: left;
-}
-
-
-/*Handles all CSS on navbar side(left) of module*/
-.recipe-module .recipe-nav-bar{
-    background-color: var(--secondary-color);
-    overflow-y: auto;
-    width: 250px;
-}
-
-.recipe-module .recipe-nav-bar .active,
-.recipe-module .recipe-nav-bar button:hover{
-    background-color: var(--active-color);
-}
-
