--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -3,3 +3,9 @@ nav{
     line-height: var(--nav-bar-height);
     padding-left: 16px;
 }
+
+@media (max-width: 768px){
+    .desktop{
+        display: none;
+    }
+}
