--- a/src/Pages/EditRecipe/EditRecipe.css
+++ b/src/Pages/EditRecipe/EditRecipe.css
@@ -13,3 +13,10 @@
 .edit-recipe .ingredients input:nth-child(2){
     max-width: 250px;
 }
+
+.edit-recipe .recipe-image{
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    max-height: 500px;
+}
